--- a/test.html
+++ b/test.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>Louna</h1>
-    <p>Mon nom c'est louna...</p>    
+    <p>Mon nom c'est louna... -- simple</p>    
   </body>
 </html>
